Rules/Tests/Reject/RejectSimple.rft
Tests a simple reject rule

--RULE--
reject from 5.1.1.1;

--EXPECT--
Rule Input:
	reject from 5.1.1.1;

Rule Result:
	Reject WhereFrom( IPMask('5.1.1.1') )

Rule Text From Result:
	reject when from 5.1.1.1/32;

============================== 
